[gd_scene load_steps=8 format=3 uid="uid://tp2toxnbxe0d"]

[ext_resource type="Theme" uid="uid://chyuq11b71wpt" path="res://ui/uiTheme.tres" id="1_7dphg"]
[ext_resource type="StyleBox" uid="uid://cujbo0fpuf2e7" path="res://ui/secondaryPanel.tres" id="2_cj1mc"]
[ext_resource type="Script" uid="uid://dfdtlmwgj2b7b" path="res://ui/shop/shop_buy_item.gd" id="3_7dphg"]
[ext_resource type="Texture2D" uid="uid://ca5nofs2b1v87" path="res://art/crops/corn_icon.png" id="4_xndhm"]

[sub_resource type="LabelSettings" id="LabelSettings_l8pt0"]

[sub_resource type="LabelSettings" id="LabelSettings_7dphg"]
font_size = 14
font_color = Color(0.87, 0.62625504, 0.51330006, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ac2cw"]
font_color = Color(0.8, 0.8, 0.8, 1)

[node name="SellItem" type="PanelContainer"]
theme = ExtResource("1_7dphg")
theme_override_styles/panel = ExtResource("2_cj1mc")
script = ExtResource("3_7dphg")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 4

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ItemName" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
text = "Corn"
label_settings = SubResource("LabelSettings_l8pt0")

[node name="ValueLabel" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "$0/ea"
label_settings = SubResource("LabelSettings_7dphg")

[node name="ItemTexture" type="TextureRect" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("4_xndhm")
expand_mode = 3
stretch_mode = 4

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 4

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
text = "Buy"
label_settings = SubResource("LabelSettings_ac2cw")

[node name="Buy1Button" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(45, 20)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "x1"

[node name="Buy10Button" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(45, 20)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "x10"
